--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -34,8 +34,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 
-    implementation "com.ms:module-super:debug-latest"
+    // 拼音
+    implementation 'com.github.promeg:tinypinyin:2.0.3'
+
+    releaseImplementation 'com.ms:android-module-impl-utils-gson:latest-RELEASE'
+    debugImplementation 'com.ms:android-module-impl-utils-gson:latest-DEBUG'
+
+    releaseImplementation "com.ms:android-module-super:latest-RELEASE"
+    debugImplementation "com.ms:android-module-super:latest-DEBUG"
+
+
 
 }
 
-apply from:"./mavenpublish_local.gradle"
+apply from: "./maven_publish.gradle"
